<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressureActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/pressureText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pressureUp"
        android:layout_width="324dp"
        android:layout_height="47dp"
        android:layout_marginTop="30dp"
        android:hint="@string/upHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/pressureDown"
        android:layout_width="321dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"
        android:hint="@string/downHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureUp" />

    <EditText
        android:id="@+id/valuePulse"
        android:layout_width="316dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:hint="@string/pulseHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureDown" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/tachoValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tachoHint"
        android:textIsSelectable="true"
        android:textOff="false"
        android:textOn="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valuePulse" />

    <EditText
        android:id="@+id/dimensionDate"
        android:layout_width="309dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/dateHint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tachoValue" />

    <Button
        android:id="@+id/buttonSavePressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/button_saveText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dimensionDate" />

</androidx.constraintlayout.widget.ConstraintLayout>